@@ -14,6 +14,9 @@
  */
 package org.apache.geode.management.internal.web;
 
+import org.apache.commons.lang.StringUtils;
+import org.apache.geode.management.internal.web.domain.Link;
+
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -21,9 +24,6 @@ import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.util.HashMap;
 import java.util.Map;
-
-import org.apache.geode.internal.lang.StringUtils;
-import org.apache.geode.management.internal.web.domain.Link;
 
 /**
  * The AbstractWebDomainTests class is abstract base class containing functionality common to a test
@@ -48,7 +48,7 @@ public abstract class AbstractWebTestCase {
     assert values != null : "The Values for the Map cannot be null!";
     assert keys.length == values.length;
 
-    final Map<K, V> map = new HashMap<K, V>(keys.length);
+    final Map<K, V> map = new HashMap<>(keys.length);
     int index = 0;
 
     for (final K key : keys) {
@@ -59,11 +59,11 @@ public abstract class AbstractWebTestCase {
   }
 
   protected String decode(final String encodedValue) throws UnsupportedEncodingException {
-    return URLDecoder.decode(encodedValue, StringUtils.UTF_8);
+    return URLDecoder.decode(encodedValue, "UTF-8");
   }
 
   protected String encode(final String value) throws UnsupportedEncodingException {
-    return URLEncoder.encode(value, StringUtils.UTF_8);
+    return URLEncoder.encode(value, "UTF-8");
   }
 
   protected String toString(final Link... links) throws UnsupportedEncodingException {
@@ -71,7 +71,7 @@ public abstract class AbstractWebTestCase {
     int count = 0;
 
     for (final Link link : links) {
-      buffer.append(count++ > 0 ? ", " : StringUtils.EMPTY_STRING).append(toString(link));
+      buffer.append(count++ > 0 ? ", " : StringUtils.EMPTY).append(toString(link));
 
     }
 
